syntax = "proto3";

package merchant_branch;

import "commons.proto";

message UpdateMerchantBranchInput {
    int32 id = 1;
    MerchantBranch data = 2;
}

message FindMerchantPayload {
    repeated MerchantBranch merchantBranches = 1;
}

message InputCreateRequest {
    string name = 1;
    string phone = 2;
    string address = 3;
    int32 userId = 4;
    int32 merchantId = 5;
    optional int32 cityCode = 6;
    optional int32 districtCode = 7;
    optional int32 wardCode = 8;
}

message MerchantBranch {
    int32 id = 1;
    string name = 2;
    string phone = 3;
    string address = 4;
    int32 createdAt = 5;
    int32 updatedAt = 6;
    int32 merchantId = 7;
    int32 userId = 8;
    optional int32 cityCode = 9;
    optional int32 districtCode = 10;
    optional int32 wardCode = 11;
}

service MerchantBranchServiceGrpc {
    rpc find (commons.Query) returns (FindMerchantPayload) {}
    rpc findOne (commons.Query) returns (MerchantBranch) {}
    rpc findById (commons.Id) returns (MerchantBranch) {}
    rpc create (InputCreateRequest) returns (MerchantBranch) {}
    rpc update (UpdateMerchantBranchInput) returns (MerchantBranch) {}
    rpc destroy (commons.Query) returns (commons.Count) {}
    rpc count (InputCreateRequest) returns (commons.Count) {}
}
